--- a/css/style.css
+++ b/css/style.css
@@ -19,41 +19,39 @@
 
 body
 {
-    display: block;
     min-height: 100vh;
     overflow: auto;
     background: var(--blue);
+}
+
+a {
+    color: inherit;
 }
 
 .navigation
 {
     position: fixed;
     width: 100%;
-    height: 3%;
+    height: 5%;
     background: #15151e;
     border-left: 10px solid var(--blue);
     transition: 0.5s;
     overflow: auto;
     z-index: 500;
+    top:0px;
 }
 
 .title
 {    
     position: relative;
-    padding-left: 60px;
+    padding-left: 55px;
     line-height: 60px;
     color: #e9e5e5;
     text-transform: uppercase;
     font-family: monospace;
     font-size: 15px;
-    left: 350px;
+    left: -45px;
     font-weight: bold;
-}
-
-img {
-	position: relative;
-    left: 11.5%;
-	top: 8px;
 }
 
 /* main */
@@ -69,15 +67,14 @@ img {
 
 .menu {
     position: fixed;
-    width: 101%;
+    width: 100%;
     top: 87px;
     margin-top: 25px;
-    background-color: #1c1c1c;
     z-index: 500;
-    left: -20px;
+    left: 350px;
 }
 
-.cardBox
+.logo-logo
 {
     position: fixed;
     margin-left: 19%;
@@ -184,10 +181,10 @@ img {
     text-align: center;
 }
 
-.menu a {
+/* .menu a {
     width: 36%;
     margin-left: 15px;
-}
+} */
 
 .recentCustomers
 {
@@ -207,21 +204,14 @@ img {
 
 .search input
 {
-    position: relative;
     height: 40px;
     border-radius: 40px;
     padding: 20px;
     font-size: 12px;
     background: #121212;
     color: #b8cbcd;
-    top: 40px;
-    left: 1340px;
-}
-
-a {
-    color: inherit;
-    text-transform: uppercase;
-    font-family: monospace;
+    margin-top: 45px;
+    margin-left: 1385px;
 }
 
 .fa {
@@ -242,18 +232,21 @@ a {
 
 .home {
     position: fixed;
-    left: 355px;
-    top: 130px;
+    left: 320px;
+    top: 132px;
 }
 
-.times {
-    left: 260px;
+.lupa {
+    margin-left: -40px;
+    margin-bottom: -5px;
 }
 
-.search {
-    top: 45px;
-    left: 1295px;
+.icons {
+    left:405px;
+    top: 8px;
+    margin-bottom: -10px;
 }
+
 
 /* @media screen and (max-width: 100%) {
     .title {
