--- a/css/stylecampeaos.css
+++ b/css/stylecampeaos.css
@@ -39,21 +39,21 @@ body
 .title
 {    
     position: relative;
-    padding-left: 40px;
+    padding-left: 55px;
     line-height: 60px;
     color: #e9e5e5;
     text-transform: uppercase;
     font-family: monospace;
     font-size: 15px;
-    left: 350px;
+    left: -45px;
     font-weight: bold;
 }
 
-img {
+/* img {
 	position: relative;
     left: 11.5%;
 	top: 8px;
-}
+} */
 
 /* main */
 .main
@@ -69,13 +69,13 @@ img {
 .menu {
     position: fixed;
     width: 100%;
-    top: 86px;
+    top: 87px;
     margin-top: 25px;
-    background-color: #1c1c1c;
     z-index: 500;
+    left: 350px;
 }
 
-.cardBox
+.logo-logo
 {
     position: fixed;
     margin-left: 19%;
@@ -176,10 +176,10 @@ img {
     text-align: center;
 }
 
-.menu a {
+/* .menu a {
     width: 36%;
     margin-left: 15px;
-}
+} */
 
 .recentCustomers
 {
@@ -199,15 +199,14 @@ img {
 
 .search input
 {
-    position: relative;
     height: 40px;
     border-radius: 40px;
     padding: 20px;
     font-size: 12px;
     background: #121212;
     color: #b8cbcd;
-    top: 38px;
-    left: 1340px;
+    margin-top: 45px;
+    margin-left: 1385px;
 }
 
 .fa {
@@ -219,26 +218,29 @@ img {
 }
 
 .champion{
-    left:0px;
+    left: 0px;
     border-radius: 0px;
     padding-right: 105px;
     height: 25px;
     display: flex;
-    margin-bottom: -11px;
+    margin-bottom: -20px;
 }
 
 .home {
-    margin-bottom:5px;
-    left: 270px;
+    position: fixed;
+    left: 320px;
+    top: 132px;
 }
 
-.times {
-    left: 260px;
+.lupa {
+    margin-left: -40px;
+    margin-bottom: -5px;
 }
 
-.search {
-    top: 45px;
-    left: 1295px;
+.icons {
+    left:405px;
+    top: 8px;
+    margin-bottom: -10px;
 }
 
 /* @media screen and (max-width: 1366px) {
