--- a/css/style.css
+++ b/css/style.css
@@ -81,23 +81,17 @@ a {
     margin-top: 28px;
 }
 
-.details
-{
-    position: absolute;
-    width: 80%;
-    top: 200px;
-    grid-gap: 30px;
-    left: 13%;
-}
 .details .recentOrders
 {
-    position: absolute;
     min-height: 500px;
     background: #1a1a1a;
     padding: 20px;
     box-shadow: 0 7px 25px rgba(0,0,0, 50%);
     border-radius: 20px;
     width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
 }
 
 .cardHeader
