--- a/css/stylecampeaos.css
+++ b/css/stylecampeaos.css
@@ -82,6 +82,15 @@ body
     margin-top: 28px;
 }
 
+.details
+{
+    position: absolute;
+    width: 80%;
+    top: 200px;
+    grid-gap: 30px;
+    left: 10%;
+}
+
 .details .recentOrders
 {
     position: absolute;
@@ -90,9 +99,6 @@ body
     padding: 20px;
     box-shadow: 0 7px 25px rgba(0,0,0, 50%);
     border-radius: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 200px;
 }
 
 .cardHeader
