--- a/css/styletorneios.css
+++ b/css/styletorneios.css
@@ -81,6 +81,15 @@ a {
     margin-top: 28px;
 }
 
+.details
+{
+    position: absolute;
+    width: 80%;
+    top: 200px;
+    grid-gap: 30px;
+    left: 13%;
+}
+
 .details .recentOrders
 {
     position: absolute;
@@ -89,9 +98,6 @@ a {
     box-shadow: 0 7px 25px rgba(0,0,0, 50%);
     border-radius: 20px;
     width: 1500px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 200px;
 }
 
 .cardHeader
