--- a/css/stylecampeaos.css
+++ b/css/stylecampeaos.css
@@ -86,9 +86,11 @@ body
 {
     position: absolute;
     width: 80%;
-    top: 200px;
     grid-gap: 30px;
     left: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
 }
 
 .details .recentOrders
