--- a/cssdostimes/stylenetshoesa.css
+++ b/cssdostimes/stylenetshoesa.css
@@ -291,9 +291,9 @@ body
     box-shadow: 0 7px 25px rgba(0,0,0, 50%);
     border-radius: 30px;
     width: 19%;
-    width: 450px;
     letter-spacing: 0.5px;
     top: -1585px;
+    left: 1350px;
 }
 
 .table5 table tr
