--- a/css/stylejogadores.css
+++ b/css/stylejogadores.css
@@ -25,14 +25,11 @@ body
 
 .navigation
 {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 3%;
     background: #15151e;
     border-left: 10px solid var(--blue);
-    transition: 0.5s;
-    overflow: auto;
-    z-index: 500;
 }
 
 .title
@@ -48,37 +45,31 @@ body
     font-weight: bold;
 }
 
-/* img {
-	position: relative;
-    left: 11.5%;
-	top: 8px;
-} */
 
 /* main */
 .main
 {
-    position: fixed;
+    position: relative;
     width: 100%;
-    top: 27px;
-    height: 14%;
+    top: 25px;
+    height: 155px;
     background-color: #1c1c1c;
     z-index: 500;
 }
 
 .menu {
-    position: fixed;
-    width: 100%;
-    top: 87px;
-    margin-top: 25px;
+    position: relative;
+    top: 85px;
+    margin-top: -120px;
     z-index: 500;
-    left: 350px;
+    margin-left: 20%;
 }
 
 .logo-logo
 {
-    position: fixed;
-    margin-left: 19%;
-    margin-top: 28px;
+    position: absolute;
+    margin-left: 21.5%;
+    margin-top: 50px;
 }
 
 .details
@@ -89,7 +80,7 @@ body
     left: 10%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
+    margin-top: 120px;
 }
 
 .details .recentOrders
@@ -117,16 +108,7 @@ body
     text-transform: uppercase;
     font-family: monospace;
 }
-.btn
-{
-    position: relative;
-    padding: 10px 40px;
-    background: var(--blue);
-    text-decoration: none;
-    color: var(--grey);
-    border-radius: 20px;
-    font-size: small;
-}
+
 .details table
 {
     width: 100%;
@@ -176,11 +158,6 @@ body
     text-align: center;
 }
 
-/* .menu a {
-    width: 36%;
-    margin-left: 15px;
-} */
-
 .recentCustomers
 {
     position: relative;
@@ -194,7 +171,7 @@ body
 
 .logo {
     margin-left: 15px;
-    margin-top: 5px;
+    margin-top: -15px;
 }
 
 .search input
@@ -218,9 +195,9 @@ body
 }
 
 .home {
-    position: fixed;
-    left: 320px;
-    top: 132px;
+    position: relative;
+    left: -5px;
+    top: 5px;
 }
 
 .lupa {
@@ -234,15 +211,41 @@ body
     margin-bottom: -10px;
 }
 
-/* @media screen and (max-width: 1366px) {
+.btn
+{
+    position: relative;
+    padding: 10px 40px;
+    background: var(--blue);
+    text-decoration: none;
+    color: var(--grey);
+    border-radius: 20px;
+    font-size: small;
+    left: 30%;
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
+.btn2 {
+    position: relative;
+    padding: 10px 40px;
+    background: var(--blue);
+    text-decoration: none;
+    color: var(--grey);
+    border-radius: 20px;
+    font-size: small;
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
+@media (max-width: 920px) {
     .title {
         left: 175px;
     }
-    .menu {
-        top: 80px;
+    .menu {   
+        flex-wrap: wrap;
     }
-    .main {
-        top:25px;
+    .main {   
+        flex-wrap: wrap;
     }
     .logo {
         left: -5px;
@@ -251,7 +254,7 @@ body
     .details {
         top: 165px;
         width: 70%;
-        left: 30px;
+        left: 60px;
     }
     .search input{
         left: 1000px;
@@ -260,24 +263,17 @@ body
     .navigation {
         height: 4%;
     }
-    .fa {
-        left:960px;
-        top:35px;
-    }
-    img {
-        left: 17%;
+    .home {
+        left: 5%;
     }
   }
 
-@media (min-width: 1366px) and (max-width: 1680px) {
+@media (max-width: 380px) {
     .title {
         left: 330px;
     }
     .menu {
-        top: 75px;
-    }
-    .main {
-        top:25px;
+        flex-wrap: wrap;
     }
     .logo {
         left: 90px;
@@ -287,7 +283,7 @@ body
     .details {
         top: 155px;
         width: 70%;
-        left: 100px;
+        left: 250px;
     }
     .search input{
         left: 1200px;
@@ -296,12 +292,7 @@ body
     .navigation {
         height: 4%;
     }
-    .fa {
-        left:1160px;
-        top:25px;
+    .home {
+        left: 5%;
     }
-
-    img {
-        left: 23%;
-    }
-} */
+}
