--- a/css/stylecampeaos.css
+++ b/css/stylecampeaos.css
@@ -26,14 +26,11 @@ body
 
 .navigation
 {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 3%;
     background: #15151e;
     border-left: 10px solid var(--blue);
-    transition: 0.5s;
-    overflow: auto;
-    z-index: 500;
 }
 
 .title
@@ -49,37 +46,30 @@ body
     font-weight: bold;
 }
 
-/* img {
-	position: relative;
-    left: 11.5%;
-	top: 8px;
-} */
-
 /* main */
 .main
 {
-    position: fixed;
+    position: relative;
     width: 100%;
-    top: 27px;
-    height: 14%;
+    top: 25px;
+    height: 155px;
     background-color: #1c1c1c;
     z-index: 500;
 }
 
 .menu {
-    position: fixed;
-    width: 100%;
-    top: 87px;
-    margin-top: 25px;
+    position: relative;
+    top: 85px;
+    margin-top: -120px;
     z-index: 500;
-    left: 350px;
+    margin-left: 20%;
 }
 
 .logo-logo
 {
-    position: fixed;
-    margin-left: 19%;
-    margin-top: 28px;
+    position: absolute;
+    margin-left: 21.5%;
+    margin-top: 50px;
 }
 
 .details
@@ -90,7 +80,7 @@ body
     left: 10%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
+    margin-top: 120px;
 }
 
 .details .recentOrders
@@ -197,7 +187,7 @@ body
 
 .logo {
     margin-left: 15px;
-    margin-top: 5px;
+    margin-top: -15px;
 }
 
 .search input
@@ -223,16 +213,17 @@ body
 .champion{
     left: 0px;
     border-radius: 0px;
-    padding-right: 105px;
+    padding-right: 120px;
     height: 25px;
     display: flex;
     margin-bottom: -20px;
+    margin-left: -5px;
 }
 
 .home {
-    position: fixed;
-    left: 320px;
-    top: 132px;
+    position: relative;
+    left: -5px;
+    top: 5px;
 }
 
 .lupa {
@@ -246,15 +237,41 @@ body
     margin-bottom: -10px;
 }
 
-/* @media screen and (max-width: 1366px) {
+.btn
+{
+    position: relative;
+    padding: 10px 40px;
+    background: var(--blue);
+    text-decoration: none;
+    color: var(--grey);
+    border-radius: 20px;
+    font-size: small;
+    left: 30%;
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
+.btn2 {
+    position: relative;
+    padding: 10px 40px;
+    background: var(--blue);
+    text-decoration: none;
+    color: var(--grey);
+    border-radius: 20px;
+    font-size: small;
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
+@media (max-width: 920px) {
     .title {
         left: 175px;
     }
-    .menu {
-        top: 80px;
+    .menu {   
+        flex-wrap: wrap;
     }
-    .main {
-        top:25px;
+    .main {   
+        flex-wrap: wrap;
     }
     .logo {
         left: -5px;
@@ -272,24 +289,17 @@ body
     .navigation {
         height: 4%;
     }
-    .fa {
-        left:960px;
-        top:35px;
-    }
-    img {
-        left: 17%;
+    .home {
+        left: 5%;
     }
   }
 
-@media (min-width: 1366px) and (max-width: 1680px) {
+@media (max-width: 380px) {
     .title {
         left: 330px;
     }
     .menu {
-        top: 75px;
-    }
-    .main {
-        top:25px;
+        flex-wrap: wrap;
     }
     .logo {
         left: 90px;
@@ -308,12 +318,7 @@ body
     .navigation {
         height: 4%;
     }
-    .fa {
-        left:1160px;
-        top:25px;
+    .home {
+        left: 5%;
     }
-
-    img {
-        left: 23%;
-    }
-} */
+}
