--- a/css/styletorneios.css
+++ b/css/styletorneios.css
@@ -30,14 +30,11 @@ a {
 
 .navigation
 {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 5%;
     background: #15151e;
     border-left: 10px solid var(--blue);
-    transition: 0.5s;
-    overflow: auto;
-    z-index: 500;
     top:0px;
 }
 
@@ -57,35 +54,34 @@ a {
 /* main */
 .main
 {
-    position: fixed;
+    position: relative;
     width: 100%;
-    top: 27px;
-    height: 14%;
+    top: 25px;
+    height: 155px;
     background-color: #1c1c1c;
     z-index: 500;
 }
 
 .menu {
-    position: fixed;
-    width: 100%;
-    top: 87px;
-    margin-top: 25px;
+    position: relative;
+    top: 85px;
+    margin-top: -120px;
     z-index: 500;
-    left: 350px;
+    margin-left: 20%;
 }
 
 .logo-logo
 {
-    position: fixed;
-    margin-left: 19%;
-    margin-top: 28px;
+    position: absolute;
+    margin-left: 21.5%;
+    margin-top: 50px;
 }
 
 .details
 {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
+    margin-top: 7%;
 }
 
 .details .recentOrders
@@ -97,7 +93,6 @@ a {
     width: 1500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
 }
 
 .cardHeader
@@ -124,7 +119,23 @@ a {
     color: var(--grey);
     border-radius: 20px;
     font-size: small;
+    left: 30%;
+    text-transform: uppercase;
+    font-family: monospace;
 }
+
+.btn2 {
+    position: relative;
+    padding: 10px 40px;
+    background: var(--blue);
+    text-decoration: none;
+    color: var(--grey);
+    border-radius: 20px;
+    font-size: small;
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
 .details table
 {
     width: 100%;
@@ -198,7 +209,7 @@ a {
 
 .logo {
     margin-left: 15px;
-    margin-top: 5px;
+    margin-top: -15px;
 }
 
 .search input
@@ -222,9 +233,9 @@ a {
 }
 
 .home {
-    position: fixed;
-    left: 320px;
-    top: 132px;
+    position: relative;
+    left: -5px;
+    top: 5px;
 }
 
 .lupa {
@@ -239,15 +250,15 @@ a {
 }
 
 
-/* @media screen and (max-width: 100%) {
+@media (max-width: 920px) {
     .title {
         left: 175px;
     }
-    .menu {
-        top: 80px;
+    .menu {   
+        flex-wrap: wrap;
     }
-    .main {
-        top:25px;
+    .main {   
+        flex-wrap: wrap;
     }
     .logo {
         left: -5px;
@@ -265,24 +276,17 @@ a {
     .navigation {
         height: 4%;
     }
-    .fa {
-        left:960px;
-        top:35px;
-    }
-    img {
-        left: 17%;
+    .home {
+        left: 5%;
     }
   }
 
-@media (min-width: 1366px) and (max-width: 1680px) {
+@media (max-width: 380px) {
     .title {
         left: 330px;
     }
     .menu {
-        top: 75px;
-    }
-    .main {
-        top:25px;
+        flex-wrap: wrap;
     }
     .logo {
         left: 90px;
@@ -301,12 +305,7 @@ a {
     .navigation {
         height: 4%;
     }
-    .fa {
-        left:1160px;
-        top:25px;
+    .home {
+        left: 5%;
     }
-
-    img {
-        left: 23%;
-    }
-} */
+}
