--- a/css/styletorneios.css
+++ b/css/styletorneios.css
@@ -263,9 +263,10 @@ a {
     }
 
     .details {
-        top: 165px;
+        top: 155px;
         width: 70%;
-        left: 60px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .search input{
         width: 200%;
